Fixing wrapping issue when debugging long scripts.

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -36,7 +36,7 @@
   padding: 2px 2px;
   background: #f3f3f3;
   color: #000;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 #script, #debug, #input {
   border: 1px solid #aaa;
